[package]
name = "ngramconnector"
version = "0.1.0"
authors = ["Felix Hedenström <felix.hedenstrom@gmail.com>"]
edition = "2018"

[lib]
name = "ngramconnector"
crate-type = ["dylib"]

[dependencies.cpython]
git = "https://github.com/dgrunwald/rust-cpython"
version = "0.2"
features = ["extension-module"]
